retailapp/eks/retailapp.yml
apiVersion: v1
kind: Namespace
metadata:
  name: retailapp
  labels:
    app: retailapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kart-deployment
  namespace: retailapp
  labels:
    app: retailapp
    service: kart
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
  selector:
    matchLabels:
      app: retailapp
      service: kart
  template:
    metadata:
      labels:
        app: retailapp
        service: kart
    spec:
      restartPolicy: Always
      containers:
      - name: kart
        image: %AWS_ACCOUNT_ID%.dkr.ecr.%AWS_REGION%.amazonaws.com/retailapp/kart:1.0
        resources:
          requests:
            cpu: "250m"
        imagePullPolicy: Always
        ports:
         - containerPort: 8445
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
  namespace: retailapp
  labels:
    app: retailapp
    service: product
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
  selector:
    matchLabels:
      app: retailapp
      service: product
  template:
    metadata:
      labels:
        app: retailapp
        service: product
    spec:
      restartPolicy: Always
      containers:
      - name: product
        image: %AWS_ACCOUNT_ID%.dkr.ecr.%AWS_REGION%.amazonaws.com/retailapp/product:1.0
        resources:
          requests:
            cpu: "250m"
        imagePullPolicy: Always
        ports:
         - containerPort: 8444
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
  namespace: retailapp
  labels:
    app: retailapp
    service: user
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
  selector:
    matchLabels:
      app: retailapp
      service: user
  template:
    metadata:
      labels:
        app: retailapp
        service: user
    spec:
      restartPolicy: Always
      containers:
      - name: user
        image: %AWS_ACCOUNT_ID%.dkr.ecr.%AWS_REGION%.amazonaws.com/retailapp/user:1.0
        resources:
          requests:
            cpu: "250m"
        imagePullPolicy: Always
        ports:
         - containerPort: 8446
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: retailapp
  labels:
    app: retailapp
    service: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: retailapp
      service: webapp
  template:
    metadata:
      labels:
        app: retailapp
        service: webapp
    spec:
      containers:
      - name: webapp
        image: %AWS_ACCOUNT_ID%.dkr.ecr.%AWS_REGION%.amazonaws.com/retailapp/webapp:1.0
        resources:
          requests:
            cpu: "250m"
        imagePullPolicy: Always
        ports:
         - containerPort: 8443
        volumeMounts:
           - mountPath: /appdata
             name: data
      restartPolicy: Always
      volumes:
        - name: data
          emptyDir: {}
      
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
  namespace: retailapp
  labels:
    app: retailapp
    service: order
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
  selector:
    matchLabels:
      app: retailapp
      service: order
  template:
    metadata:
      labels:
        app: retailapp
        service: order
    spec:
      restartPolicy: Always
      containers:
      - name: order
        image: %AWS_ACCOUNT_ID%.dkr.ecr.%AWS_REGION%.amazonaws.com/retailapp/order:1.0
        resources:
          requests:
            cpu: "250m"
        imagePullPolicy: Always
        ports:
         - containerPort: 8448
---
apiVersion: v1
kind: Service
metadata:
  name: kart
  namespace: retailapp
  labels:
    app: oktank
    service: kart
spec:
  type: ClusterIP
  selector:
    app: retailapp
    service: kart
  ports:
    - name: kart
      protocol: TCP
      port: 8445
      targetPort: 8445
---
apiVersion: v1
kind: Service
metadata:
  name: product
  namespace: retailapp
  labels:
    app: oktank
    service: product
spec:
  type: ClusterIP
  selector:
    app: retailapp
    service: product
  ports:
    - name: product
      protocol: TCP
      port: 8444
      targetPort: 8444
---
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: retailapp
  labels:
    app: oktank
    service: user
spec:
  type: ClusterIP
  selector:
    app: retailapp
    service: user
  ports:
    - name: user
      protocol: TCP
      port: 8446
      targetPort: 8446
---
apiVersion: v1
kind: Service
metadata:
  name: order
  namespace: retailapp
  labels:
    app: oktank
    service: order
spec:
  type: ClusterIP
  selector:
    app: retailapp
    service: order
  ports:
    - name: order
      protocol: TCP
      port: 8448
      targetPort: 8448
---
apiVersion: v1
kind: Service
metadata:
  name: webappnp
  namespace: retailapp
  labels:
    app: oktank
    service: webappnp
spec:
  type: NodePort
  selector:
    service: webapp
  ports:
    - port: 80
      targetPort: 8443
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
  namespace: retailapp
  labels:
    app: oktank
    service: webapp
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Application=webapp
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /healthcheck
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '60'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '30'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '5'
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true, load_balancing.algorithm.type=least_outstanding_requests
spec:
  rules:
   - http:
      paths:
       - path: /
         pathType: Prefix
         backend:
          service:
            name: webappnp
            port:
              number: 80
